infra/gitops/taskapp/10-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: taskapp
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  clusterIP: None
  ports:
    - port: 5432
  selector:
    app: taskapp
    tier: database

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: taskapp
  labels:
    app: taskapp
    tier: database
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: taskapp
      tier: database
  template:
    metadata:
      labels:
        app: taskapp
        tier: database
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 999    # postgres:15-alpine's built-in postgres user
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postgres
          image: postgres:15-alpine
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 5432
              name: dbport
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          startupProbe:
            exec:
              command: ["pg_isready", "-U", "taskapp_user", "-d", "taskapp"]
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "taskapp_user", "-d", "taskapp"]
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "taskapp_user", "-d", "taskapp"]
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 6
  volumeClaimTemplates:
    - metadata:
        name: db-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 5Gi
